@@ -116,52 +116,3 @@
       };
     });
   })();
-
-  /*--------------------------------------------------------------------------*/
-
-  Element._insertionTranslations = {
-    'tags': {
-      'COLGROUP': ['<table><colgroup>',      '</colgroup><tbody></tbody></table>', 2],
-      'SELECT':   ['<select>',               '</select>',                          1],
-      'TABLE':    ['<table>',                '</table>',                           1],
-      'TBODY':    ['<table><tbody>',         '</tbody></table>',                   2],
-      'TR':       ['<table><tbody><tr>',     '</tr></tbody></table>',              3],
-      'TD':       ['<table><tbody><tr><td>', '</td></tr></tbody></table>',         4]
-    }
-  };
-
-  (function() {
-    this.before = function before(element, node) {
-      element.parentNode &&
-        element.parentNode.insertBefore(node, element);
-    };
-
-    this.top = function top(element, node) {
-      element.insertBefore(node, element.firstChild);
-    };
-
-    this.bottom = function bottom(element, node) {
-      element.appendChild(node);
-    };
-
-    this.after = function after(element, node) {
-      element.parentNode &&
-        element.parentNode.insertBefore(node, element.nextSibling);
-    };
-
-    // prevent JScript bug with named function expressions
-    var after = null,
-     before =   null,
-     bottom =   null,
-     top =      null;
-  }).call(Element._insertionTranslations);
-
-  (function() {
-    Object._extend(this.tags, {
-      // TODO: Opera fails to render optgroups when set with innerHTML
-      'OPTGROUP': this.tags.SELECT,
-      'TFOOT':    this.tags.TBODY,
-      'TH':       this.tags.TD,
-      'THEAD':    this.tags.TBODY
-    });
-  }).call(Element._insertionTranslations);
