@@ -72,6 +72,8 @@
 <div id="testdiv-replace-container-3"><div id="testdiv-replace-3"></div></div>
 <div id="testdiv-replace-container-4"><div id="testdiv-replace-4"></div></div>
 <div id="testdiv-replace-container-5"><div id="testdiv-replace-5"></div></div>
+<div id="testdiv-replace-container-6"><div id="testdiv-replace-6"></div></div>
+<div id="testdiv-replace-container-7"><div id="testdiv-replace-7"></div></div>
 <div id="testdiv-replace-container-element"><div id="testdiv-replace-element"></div></div>
 <div id="testdiv-replace-container-toelement"><div id="testdiv-replace-toelement"></div></div>
 <div id="testdiv-replace-container-tohtml"><div id="testdiv-replace-tohtml"></div></div>
