@@ -1,3 +1,5 @@
+* Add support for script elements in Element#update, Element#insert, and Element#replace. [Prototype LH #573] [jddalton, kangax, Martin, Tobie Langel]
+
 * Work around IE8 bug causing APPLET and OBJECT elements not to inherit from their prototypes. [jddalton]
 
 * Fix Safari 2 bugs in getWindow() and Event.extend() as well as comment Element.extend(). [jddalton]
